--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha **/*.spec.js --watch",
+    "typecheck": "tsc --allowJs --strict --noemit --checkJs **/*.js ",
     "build": "echo 'nothing to do'"
   },
   "repository": {
@@ -25,7 +26,10 @@
   },
   "homepage": "https://github.com/gerardolima/js-with-typecheck#readme",
   "devDependencies": {
+    "@types/chai": "4.1.7",
+    "@types/mocha": "5.2.6",
     "chai": "4.2.0",
-    "mocha": "6.1.1"
+    "mocha": "6.1.1",
+    "typescript": "3.4.2"
   }
 }
